Use index.html as login url